--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "api-routes-apollo-server",
-  "version": "1.0.0",
+  "name": "with-graphql-react",
+  "private": true,
+  "license": "MIT",
+  "dependencies": {
+    "@shopify/buy-button-js": "^2.1.7",
+    "graphql-react": "^11.0.1",
+    "next": "^10.0.4",
+    "next-graphql-react": "^8.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "shopify-buy": "^2.11.0"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "export": "next export",
     "start": "next start"
-  },
-  "dependencies": {
-    "apollo-server-micro": "2.13.1",
-    "graphql": "15.0.0",
-    "next": "^10.0.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
-  "license": "MIT"
+  }
 }
