--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react-dom": "^17.0.1",
     "shopify-buy": "^2.11.0"
   },
+  "devDependencies": {
+    "critters": "^0.0.6"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
