--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next-graphql-react": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "shopify-buy": "^2.11.0"
+    "shopify-buy": "^2.11.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "dev": "next",
