--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postbuild": "next-on-netlify"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "netlify-cli": "^3.4.2"
   }
 }
