--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@shopify/buy-button-js": "^2.1.7",
     "@shopify/polaris-icons": "^4.2.0",
-    "graphql-react": "^11.0.1",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "next": "^10.0.4",
-    "next-graphql-react": "^8.0.0",
     "next-on-netlify": "^2.8.4",
     "polished": "^4.1.0",
     "prop-types": "^15.7.2",
