--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@shopify/buy-button-js": "^2.1.7",
     "@shopify/polaris-icons": "^4.2.0",
+    "full-icu": "^1.3.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "intl": "^1.2.5",
     "next": "^10.0.4",
     "next-on-netlify": "^2.8.4",
     "polished": "^4.1.0",
@@ -17,7 +19,7 @@
     "styled-components": "^5.2.1"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "NODE_ICU_DATA=node_modules/full-icu next",
     "build": "next build",
     "start": "next start",
     "preview-dev": "npm run build && netlify dev",
