--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "remark-gfm": "^1.0.0",
     "shopify-buy": "^2.11.0",
     "styled-components": "^5.2.1"
   },
